// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders TertiaryMenu non-visible 1`] = `
<div
  className="sc-bczRLJ evZOWk"
>
  <ul
    className="sc-gsnTZi ekVTqR"
  />
</div>
`;

exports[`renders TertiaryMenu visible 1`] = `
<div
  className="sc-bczRLJ bZgBmQ"
>
  <ul
    className="sc-gsnTZi ekVTqR"
  />
</div>
`;
